crates/rdapify/tests/snapshots/snapshot__status_order.snap
---
source: crates/rdapify/tests/snapshot.rs
assertion_line: 148
expression: status_strs
---
[
    "active",
    "client delete prohibited",
    "client transfer prohibited",
]
